--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     docker:
       - image: circleci/ruby:2.6.6-node-browsers
         environment:
-          - MYSQL_HOST: mysql
+          - MYSQL_HOST: 127.0.0.1
           - MYSQL_DATABASE: app_development
           - MYSQL_USERNAME: root
           - MYSQL_PASSWORD: root
