--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           - MYSQL_DATABASE: app_development
           - MYSQL_ROOT_HOST: '%'
           - MYSQL_HOST: 127.0.0.1
-          MYSQL_ROOT_PASSWORD: 'root'
+          - MYSQL_ROOT_PASSWORD: 'root'
         command: |
           mysqld --default-authentication-plugin=mysql_native_password
 
